--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Putra kedua dari <b>bapak Darlianto & ibu Nia Arna Dewi</b>
             <div class="container text-center">
                 <h2 style="font-size: 55px; margin-bottom: 40px;">Momen Bahagia</h2>
                 <div class="row">
-                    <div class="col-md-4 col-6" data-aos="fade-up"><img src="https://github.com/undanganbahagia/aqiqah.github.io/blob/main/foto/1.jpeg" class="gallery-img"></div>
+                    <div class="col-md-4 col-6" data-aos="fade-up"><img src="foto/1.jpeg" class="gallery-img"></div>
                     <div class="col-md-4 col-6" data-aos="fade-up" data-aos-delay="100"><img src="foto/2.jpeg" class="gallery-img"></div>
                     <div class="col-md-4 col-12" data-aos="fade-up" data-aos-delay="200"><img src="foto/3.jpeg" class="gallery-img"></div>
                 </div>
@@ -166,3 +166,4 @@ Putra kedua dari <b>bapak Darlianto & ibu Nia Arna Dewi</b>
 </body>
 
 </html>
+
